--- a/MDK-ARM/Test.uvprojx
+++ b/MDK-ARM/Test.uvprojx
@@ -206,7 +206,7 @@
             <Ro2Chk>0</Ro2Chk>
             <Ro3Chk>0</Ro3Chk>
             <Ir1Chk>1</Ir1Chk>
-            <Ir2Chk>1</Ir2Chk>
+            <Ir2Chk>0</Ir2Chk>
             <Ra1Chk>0</Ra1Chk>
             <Ra2Chk>0</Ra2Chk>
             <Ra3Chk>0</Ra3Chk>
@@ -394,16 +394,6 @@
           <GroupName>Application/User/Core</GroupName>
           <Files>
             <File>
-              <FileName>FrequencyCounter.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Core\Src\FrequencyCounter.h</FilePath>
-            </File>
-            <File>
-              <FileName>FrequencyCounter.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Core\Src\FrequencyCounter.c</FilePath>
-            </File>
-            <File>
               <FileName>main.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Core/Src/main.c</FilePath>
@@ -417,6 +407,16 @@
               <FileName>stm32f1xx_hal_msp.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f1xx_hal_msp.c</FilePath>
+            </File>
+            <File>
+              <FileName>FrequencyCounter.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\FrequencyCounter.h</FilePath>
+            </File>
+            <File>
+              <FileName>FrequencyCounter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\FrequencyCounter.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -566,8 +566,8 @@
   <RTE>
     <apis/>
     <components>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="4.3.0" condition="CMSIS Core">
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="4.5.0"/>
+      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="5.5.0" condition="ARMv6_7_8-M Device">
+        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.8.0"/>
         <targetInfos>
           <targetInfo name="Test"/>
         </targetInfos>
