--- a/MDK-ARM/Test.uvprojx
+++ b/MDK-ARM/Test.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103x6</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;           ../Drivers/STM32F1xx_HAL_Driver/Inc;           ../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;           ../Drivers/CMSIS/Device/ST/STM32F1xx/Include;           ../Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>../Core/Inc; ../Drivers/STM32F1xx_HAL_Driver/Inc; ../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy; ../Drivers/CMSIS/Device/ST/STM32F1xx/Include; ../Drivers/CMSIS/Include; ..\MDK-ARM</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -402,6 +402,16 @@
               <FileName>FrequencyCounter.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\FrequencyCounter.c</FilePath>
+            </File>
+            <File>
+              <FileName>MedianFilter.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\Inc\MedianFilter.h</FilePath>
+            </File>
+            <File>
+              <FileName>MedianFilter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\MedianFilter.c</FilePath>
             </File>
             <File>
               <FileName>main.c</FileName>
